Fix 5: Account page height max and overflow

--- a/src/styles/ProfilePage.scss
+++ b/src/styles/ProfilePage.scss
@@ -31,7 +31,7 @@
   box-sizing: border-box;
   
   .profile-container {
-    max-height: var(--account-height-calc);
+    // max-height: var(--account-height-calc);
     overflow: auto;
     width: var(--acc-container-width);
     display: flex;
@@ -46,6 +46,7 @@
       display: flex;
       flex-direction: column;
       border-bottom: 2px solid var(--secondary-color);
+      margin: 0 0 10px;
       
       h2 {
         font-size: var(--font-size-container-title);
